--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
 </head>
 <body>
   <div class="panel">
-    <div class="header">2.0TD</div>
+    <div style="display: flex; align-items: stretch; justify-content: center;">
+  <div style="background: #2a6e36; color: white; display: flex; align-items: center; justify-content: center; font-size: 28px; font-weight: bold; padding: 10px 20px; writing-mode: vertical-lr; text-orientation: upright; border: 3px solid #2a6e36;">2.0TD</div>
     <div class="contenido">
       <table class="tabla-datos">
         <tr>
@@ -240,7 +241,7 @@
         <span>Actual</span><span>Nueva</span>
       </div>
     </div>
-  </div>
+</div>
   <script src="main.js"></script>
 </body>
 </html>
