--- a/index.html
+++ b/index.html
@@ -2,40 +2,49 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>2.0TD Presupuestador</title>
+  <title>Presupuestador Luz</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Usa tus estilos aquí o intégralos -->
   <style>
     body {
       background: #eaf4ec;
       font-family: 'Segoe UI', sans-serif;
-      padding: 6px;
+      padding: 10px;
+    }
+    .contenedor {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
     }
     .panel {
-      max-width: 860px;
-      margin: auto;
       background: white;
       border: 3px solid #2a6e36;
-      padding: 6px;
+      padding: 10px;
+      max-width: 420px;
+      flex-grow: 1;
     }
-    .header {
+    .titulo {
       background: #2a6e36;
       color: white;
       text-align: center;
-      padding: 6px;
-      font-size: 32px;
+      padding: 8px;
+      font-size: 22px;
       font-weight: bold;
-    }
-    .contenido {
-      display: flex;
-      margin-top: 20px;
-      justify-content: space-between;
+      margin-bottom: 8px;
     }
     .tabla-datos {
-      border-collapse: collapse;
-      width: 50%;
+      width: 100%;
     }
-    .tabla-datos td, .tabla-datos th {
-      border: 1px solid #999;
-      padding: 8px;
+    .tabla-datos td {
+      padding: 4px;
+    }
+    .label {
+      background: #a5d6a7;
+      font-weight: bold;
+    }
+    .celda input {
+      width: 100%;
+      padding: 4px;
     }
     .header-oferta {
       background: #a5d6a7;
@@ -45,69 +54,31 @@
     .cell-oferta {
       background: #ffccbc;
     }
-    .label-grey {
-      background: #e0e0e0;
-      font-weight: bold;
-    }
-    .label-green {
-      background: #a5d6a7;
-      font-weight: bold;
-    }
-    .cell-lightgreen {
-      background: #e8f5e9;
-    }
-    input, select {
-      width: 100%;
-      box-sizing: border-box;
-      padding: 4px;
-      border: 1px solid #666;
-    }
     .total-section {
-      width: 45%;
-      text-align: center;
+      margin-top: 10px;
     }
     .titulo-total {
       background: #ffccbc;
-      color: #000;
+      text-align: center;
+      padding: 5px;
       font-weight: bold;
-      padding: 6px;
-      font-size: 14px;
     }
     .resultado {
-      margin-top: 10px;
       background: #d4f7d4;
-      padding: 8px;
+      padding: 6px;
+      margin-top: 4px;
+      font-size: 14px;
+    }
+    .promo {
+      background: #ffecb3;
+      border: 1px solid #ffb300;
+      margin-top: 6px;
+      padding: 5px;
       text-align: center;
-      border: 2px solid #2a6e36;
-      transition: background-color 0.5s ease, transform 0.4s ease;
-      animation: entrada 0.6s ease-in-out;
       font-size: 14px;
     }
-    @keyframes entrada {
-      0% {
-        transform: scale(0.95);
-        opacity: 0;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-    .ahorro-verde {
-      color: #388e3c;
-      transition: color 0.4s ease;
-      font-size: 14px;
-      font-weight: bold;
-    }
-    .ahorro-rojo {
-      color: #d32f2f;
-      transition: color 0.4s ease;
-      font-size: 14px;
-      font-weight: bold;
-    }
-    .barras-container {
+    .grafico {
       margin-top: 10px;
-      text-align: center;
     }
     .barras {
       display: flex;
@@ -116,132 +87,99 @@
       height: 100px;
       background: #f9f9f9;
       border: 1px solid #ccc;
-      margin: 0 auto;
-      max-width: 200px;
+      margin-bottom: 5px;
     }
     .barra {
-      width: 60px;
-      transition: height 0.6s ease;
+      width: 40px;
     }
     .barra-actual {
-      background-color: #ffcccb; /* pale red */
+      background: #ffcccc;
     }
     .barra-nueva {
-      background-color: #4caf50; /* green */
+      background: #4caf50;
     }
     .label-barras {
       display: flex;
       justify-content: space-around;
-      margin-top: 5px;
-    }
-    .label-barras span {
-      width: 60px;
-      text-align: center;
-      font-size: 14px;
+      font-size: 13px;
       color: #2a6e36;
     }
-  
-/* Enlarge Factura actual value in table */
-.tabla-datos td.factura-valor {
-  font-size: 24px;
-  font-weight: bold;
-}
-
-
-  /* Estilos para resultado reorganizado */
-  .resultado-principal {
-    text-align: left;
-    padding: 6px;
-  }
-  .resultado-principal strong {
-    display: inline-block;
-    width: 120px;
-    font-size: 14px;
-  }
-  .factura-actual-value, .factura-nueva-value {
-    font-weight: bold;
-    font-size: 18px;
-  }
-  .promo-box {
-    margin-top: 15px;
-    background-color: #ffecb3;
-    border: 2px solid #ffb300;
-    padding: 6px;
-    text-align: center;
-    font-size: 14px;
-  }
-</style>
+  </style>
 </head>
 <body>
-  <div class="panel">
-    <div style="display: flex; align-items: stretch; justify-content: center;">
-  <div style="background: #2a6e36; color: white; display: flex; align-items: center; justify-content: center; font-size: 28px; font-weight: bold; padding: 10px 20px; writing-mode: vertical-lr; text-orientation: upright; border: 3px solid #2a6e36;">2.0TD</div>
-    <div class="contenido">
+  <div class="contenedor">
+
+    <!-- PANEL 2.0TD -->
+    <div class="panel">
+      <div class="titulo">2.0TD</div>
       <table class="tabla-datos">
-        <tr>
-          <th class="header-oferta">OFERTA</th>
-          <td class="cell-oferta"><select id="oferta_20td"></select></td>
-        </tr>
-        <tr>
-          <td class="label-grey">Potencia</td>
-          <td><input id="potencia20" type="number" step="0.01"></td>
-        </tr>
-        <tr>
-          <td class="label-green">Días</td>
-          <td class="cell-lightgreen"><input id="dias20" type="number"></td>
-        </tr>
-        <tr>
-          <td class="label-grey">Consumo P1</td>
-          <td><input id="consumo1_20" type="number"></td>
-        </tr>
-        <tr>
-          <td class="label-green">Consumo P2</td>
-          <td class="cell-lightgreen"><input id="consumo2_20" type="number"></td>
-        </tr>
-        <tr>
-          <td class="label-grey">Consumo P3</td>
-          <td><input id="consumo3_20" type="number"></td>
-        </tr>
-        <tr>
-          <td class="label-green">Alquiler de equipos</td>
-          <td class="cell-lightgreen"><input id="alquiler20" type="number"></td>
-        </tr>
-        <tr>
-          <td class="label-grey">Bono social</td>
-          <td><input id="bono20" type="number" step="0.000001" value="0.012742" step="0.000001"></td>
-        </tr>
-        <tr>
-          <td class="label-green">IVA</td>
-          <td class="cell-lightgreen"><input id="iva20" type="number" value="21"></td>
-        </tr>
-        <tr>
-          <td class="label-grey">Factura actual</td>
-          <td><input id="factura20" type="number"></td>
-        </tr>
+        <tr><td class="header-oferta">OFERTA</td><td class="cell-oferta"><select id="oferta_20td"></select></td></tr>
+        <tr><td class="label">Potencia</td><td class="celda"><input id="potencia20" type="number" step="0.01"></td></tr>
+        <tr><td class="label">Días</td><td class="celda"><input id="dias20" type="number"></td></tr>
+        <tr><td class="label">Consumo P1</td><td class="celda"><input id="consumo1_20" type="number"></td></tr>
+        <tr><td class="label">Consumo P2</td><td class="celda"><input id="consumo2_20" type="number"></td></tr>
+        <tr><td class="label">Consumo P3</td><td class="celda"><input id="consumo3_20" type="number"></td></tr>
+        <tr><td class="label">Alquiler</td><td class="celda"><input id="alquiler20" type="number"></td></tr>
+        <tr><td class="label">Bono social</td><td class="celda"><input id="bono20" type="number" step="0.000001" value="0.012742"></td></tr>
+        <tr><td class="label">IVA</td><td class="celda"><input id="iva20" type="number" value="21"></td></tr>
+        <tr><td class="label">Factura actual</td><td class="celda"><input id="factura20" type="number"></td></tr>
       </table>
       <div class="total-section">
         <div class="titulo-total">TOTAL</div>
         <div class="resultado" id="resultado_20td"></div>
-        <div class="barras-container" style="margin-top: 20px;">
-        <div class="barras">
-          <div id="barra-actual" class="barra barra-actual" style="height: 0%;"></div>
-          <div id="barra-nueva" class="barra barra-nueva" style="height: 0%;"></div>
-        </div>
-        <div class="label-barras">
-          <span>Actual</span><span>Nueva</span>
+        <div class="promo" id="promo20"></div>
+        <div class="grafico">
+          <div class="barras">
+            <div id="barra-actual" class="barra barra-actual"></div>
+            <div id="barra-nueva" class="barra barra-nueva"></div>
+          </div>
+          <div class="label-barras"><span>Actual</span><span>Nueva</span></div>
         </div>
       </div>
     </div>
-    <div style="display:none">
-      <div class="barras">
-        <div id="barra-actual" class="barra barra-actual" style="height: 0%;"></div>
-        <div id="barra-nueva" class="barra barra-nueva" style="height: 0%;"></div>
-      </div>
-      <div class="label-barras">
-        <span>Actual</span><span>Nueva</span>
+
+    <!-- PANEL 3.0TD -->
+    <div class="panel">
+      <div class="titulo">3.0TD</div>
+      <table class="tabla-datos">
+        <tr><td class="header-oferta">OFERTA</td><td class="cell-oferta"><select id="oferta_30td"></select></td></tr>
+        <tr><td class="label">Días</td><td class="celda"><input id="dias30" type="number"></td></tr>
+        <!-- Potencias P1–P6 -->
+        <tr><td class="label">Potencia P1</td><td class="celda"><input id="potencia30_p1" type="number"></td></tr>
+        <tr><td class="label">Potencia P2</td><td class="celda"><input id="potencia30_p2" type="number"></td></tr>
+        <tr><td class="label">Potencia P3</td><td class="celda"><input id="potencia30_p3" type="number"></td></tr>
+        <tr><td class="label">Potencia P4</td><td class="celda"><input id="potencia30_p4" type="number"></td></tr>
+        <tr><td class="label">Potencia P5</td><td class="celda"><input id="potencia30_p5" type="number"></td></tr>
+        <tr><td class="label">Potencia P6</td><td class="celda"><input id="potencia30_p6" type="number"></td></tr>
+        <!-- Consumos P1–P6 -->
+        <tr><td class="label">Consumo P1</td><td class="celda"><input id="consumo30_p1" type="number"></td></tr>
+        <tr><td class="label">Consumo P2</td><td class="celda"><input id="consumo30_p2" type="number"></td></tr>
+        <tr><td class="label">Consumo P3</td><td class="celda"><input id="consumo30_p3" type="number"></td></tr>
+        <tr><td class="label">Consumo P4</td><td class="celda"><input id="consumo30_p4" type="number"></td></tr>
+        <tr><td class="label">Consumo P5</td><td class="celda"><input id="consumo30_p5" type="number"></td></tr>
+        <tr><td class="label">Consumo P6</td><td class="celda"><input id="consumo30_p6" type="number"></td></tr>
+        <!-- Extras -->
+        <tr><td class="label">Alquiler</td><td class="celda"><input id="alquiler30" type="number"></td></tr>
+        <tr><td class="label">Bono social</td><td class="celda"><input id="bono30" type="number" value="0.012742" step="0.000001"></td></tr>
+        <tr><td class="label">IVA</td><td class="celda"><input id="iva30" type="number" value="21"></td></tr>
+        <tr><td class="label">Factura actual</td><td class="celda"><input id="factura30" type="number"></td></tr>
+      </table>
+      <div class="total-section">
+        <div class="titulo-total">TOTAL</div>
+        <div class="resultado" id="resultado_30td"></div>
+        <div class="promo" id="promo30"></div>
+        <div class="grafico">
+          <div class="barras">
+            <div id="barra30-actual" class="barra barra-actual"></div>
+            <div id="barra30-nueva" class="barra barra-nueva"></div>
+          </div>
+          <div class="label-barras"><span>Actual</span><span>Nueva</span></div>
+        </div>
       </div>
     </div>
-</div>
+
+  </div>
+
   <script src="main.js"></script>
 </body>
 </html>
